[gd_scene load_steps=3 format=3 uid="uid://bu2igfmkaia87"]

[ext_resource type="Script" path="res://data_edit/data_edit.gd" id="1_d7wbf"]
[ext_resource type="Script" path="res://data_edit/empty_popup.gd" id="2_wd08f"]

[node name="DataEdit" type="GraphEdit"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
right_disconnects = true
script = ExtResource("1_d7wbf")

[node name="ContextMenu" type="PopupMenu" parent="."]
size = Vector2i(84, 62)
script = ExtResource("2_wd08f")

[node name="DataNodeContextMenu" type="PopupMenu" parent="."]
size = Vector2i(102, 62)
item_count = 2
item_0/text = "Copy"
item_0/id = 0
item_1/text = "Duplicate"
item_1/id = 1
